trunk/Archive2/69/4386babaca4750/output
main.cpp: In function 'int main()':
main.cpp:12:18: error: cannot convert 'A' to 'const int' in initialization
    const int x = a;  // error: no conversion from `A` to `int`
                  ^
